--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
-    <link rel="icon" href="Task 2/images/logo.png">
+    <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="main">
         <nav>
-            <a href="Task 1/task-1.html">Task 1</a>
-            <a href="Task 2/task-2.html">Task 2</a>
-            <a href="Task 4/task-4.html">Task 4</a>
+            <a href="task-1.html">Task 1</a>
+            <a href="task-2.html">Task 2</a>
+            <a href="task-4.html">Task 4</a>
         </nav>
     </div>
 </body>
