--- a/task-4.html
+++ b/task-4.html
@@ -1,83 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
-    <link rel="stylesheet" href="css/task-4.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/task-4.css" />
+  </head>
+  <body>
     <div id="navbar">
-        <div class="left">
-            <img src="images/figma.png" alt="Logo">
-            <h2>Figma</h2>
-        </div>
-        <div class="right">
-            <img src="images/profile.png" alt="Image">
-        </div>
+      <div class="left">
+        <img src="images/figma.png" alt="Logo" />
+        <h2>Figma</h2>
+      </div>
+      <div class="right">
+        <img src="images/profile.png" alt="Image" />
+      </div>
     </div>
     <div class="container">
-    <div id="sidebar">
+      <div id="sidebar">
         <div class="side">
-            <nav>
-                <a href="#" class="active">Dashboard</a><br>
-                <a href="#">Users</a><br>
-                <a href="#">Customers</a><br>
-                <a href="#">Purchases</a><br>
-                <a href="#">sales</a><br>
-                <a href="#">Task</a><br>
-                <a href="#">Employees</a><br>
-                <a href="#">Accounts</a><br>
-                <a href="#">Configuration</a><br>
-                <a href="#">Auditing</a><br>
-                <a href="#">Reports</a><br>
-            </nav>
+          <nav>
+            <a href="#" class="active">Dashboard</a><br />
+            <a href="#">Users</a><br />
+            <a href="#">Customers</a><br />
+            <a href="#">Purchases</a><br />
+            <a href="#">sales</a><br />
+            <a href="#">Task</a><br />
+            <a href="#">Employees</a><br />
+            <a href="#">Accounts</a><br />
+            <a href="#">Configuration</a><br />
+            <a href="#">Auditing</a><br />
+            <a href="#">Reports</a><br />
+          </nav>
         </div>
-    </div>
-    <div id="main">
+      </div>
+      <div id="main">
         <div id="tile-container">
-            <h2>Dashboard</h2>
-        <div class="tile green-bg">
+          <h2>Dashboard</h2>
+          <div class="tile green-bg">
             <p>
-                Total sales <br><br> AED 20,0000
+              Total sales <br /><br />
+              AED 20,0000
             </p>
-        </div>
-        <div class="tile purple-bg">
+          </div>
+          <div class="tile purple-bg">
             <p>
-                Total Purchase <br><br> AED 10,0000
+              Total Purchase <br /><br />
+              AED 10,0000
             </p>
-        </div>
-        <div class="tile red-bg">
+          </div>
+          <div class="tile red-bg">
             <p>
-                Total Expenses <br><br> AED 5,0000
+              Total Expenses <br /><br />
+              AED 5,0000
             </p>
-        </div>
-        <div class="tile cyan-bg last">
+          </div>
+          <div class="tile cyan-bg last">
             <p>
-                Revenue <br><br> AED 5,0000
+              Revenue <br /><br />
+              AED 5,0000
             </p>
+          </div>
         </div>
-    </div>
-    <div id="graph-container">
-        <div class="circle purple-bg">
+        <div id="graph-container">
+          <div class="circle purple-bg">
             <div class="inner-circle on green-bg">
-                <h2>50/400</h2>
+              <h2>50/400</h2>
             </div>
-        </div>
-        <div class="circle cyan-bg">
+          </div>
+          <div class="circle cyan-bg">
             <div class="inner-circle tw">
-                <h2>10/200</h2>
+              <h2>10/200</h2>
             </div>
-        </div>
-        <div class="circle red-bg">
+          </div>
+          <div class="circle red-bg">
             <div class="inner-circle fou">
-            <div class="inner-circle thre purple-bg">
+              <div class="inner-circle thre purple-bg">
                 <h2>Danger</h2>
+              </div>
             </div>
-        </div>
-        </div>
-        <div class="chart">
+          </div>
+          <div class="chart">
             <div class="bar green-bg one"></div>
             <div class="bar red-bg two"></div>
             <div class="bar purple-bg three"></div>
@@ -85,9 +89,9 @@
             <div class="bar grey-bg five"></div>
             <div class="bar orange-bg six"></div>
             <div class="line"></div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</div>
-</body>
+  </body>
 </html>
