--- a/task-4.html
+++ b/task-4.html
@@ -56,7 +56,7 @@
               AED 5,0000
             </p>
           </div>
-          <div class="tile cyan-bg last">
+          <div class="tile cyan-bg">
             <p>
               Revenue <br /><br />
               AED 5,0000
