--- a/task-4.html
+++ b/task-4.html
@@ -17,7 +17,7 @@
         <img src="images/profile.png" alt="Image" />
       </div>
     </div>
-    <div class="container">
+    <div class="main">
       <div id="sidebar">
         <div class="side">
           <nav>
@@ -35,7 +35,7 @@
           </nav>
         </div>
       </div>
-      <div id="main">
+      <div id="container">
         <div id="tile-container">
           <h2>Dashboard</h2>
           <div class="tile green-bg">
