--- a/task-4.html
+++ b/task-4.html
@@ -63,7 +63,7 @@
             </p>
           </div>
         </div>
-        <div id="graph-container">
+        <div id="circle-container">
           <div class="circle purple-bg">
             <div class="inner-circle on green-bg">
               <h2>50/400</h2>
