--- a/task-1.html
+++ b/task-1.html
@@ -39,7 +39,7 @@
         sit et minim fugiat amet.
       </p>
     </div>
-    <div class="boxes m-r m-l">
+    <div class="boxes m-r">
       <h1>Lorem ipsum dolor sit amet</h1>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi
