--- a/task-2.html
+++ b/task-2.html
@@ -21,8 +21,8 @@
         </nav>
       </div>
     </div>
-    <div class="box third">
-      <div class="boxes first m-l">
+    <div id="main-container">
+      <div class="box first">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi
@@ -31,7 +31,7 @@
           Consequuntur!
         </p>
       </div>
-      <div class="boxes second m-r">
+      <div class="box second">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi
