--- a/task-1.html
+++ b/task-1.html
@@ -34,12 +34,11 @@
         dolor id duis non esse sunt fugiat aute ullamco culpa. Velit aliqua
         cillum aute incididunt deserunt veniam et Lorem ad ipsum. Est irure
         nulla officia officia. Do occaecat consectetur cupidatat enim velit id
-        anim laboris sint reprehenderit aliqua. Incididunt incididunt
-        reprehenderit ex aute magna. Culpa aliquip exercitation reprehenderit
+        anim laboris sint reprehender Culpa aliquip exercitation reprehenderit
         sit et minim fugiat amet.
       </p>
     </div>
-    <div class="boxes m-r">
+    <div class="boxes first m-r">
       <h1>Lorem ipsum dolor sit amet</h1>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi
@@ -48,7 +47,7 @@
         Consequuntur!
       </p>
     </div>
-    <div class="boxes m-r">
+    <div class="boxes second m-r">
       <h1>Lorem ipsum dolor sit amet</h1>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi
