--- a/task-6.html
+++ b/task-6.html
@@ -67,7 +67,7 @@
             <div>
                 <label for="additiional">Choose Additional Subjects :</label>
                 <div class="marg top">
-                <label for=""><input type="checkbox" class="check">Cyber Security</label>
+                <label for="" class="pad"><input type="checkbox" class="check">Cyber Security</label>
                 <label for="" class="pad"><input type="checkbox" class="check">Artificial Intelligence</label>
                 <label for="" class="pad"><input type="checkbox" class="check">Blockchain</label>
                 <label for="" class="pad"><input type="checkbox" class="check">IoT</label>
