--- a/task-6.html
+++ b/task-6.html
@@ -60,7 +60,7 @@
             <div class="hostel marg">
             <label for="">Do You Need Hostel facility :</label> 
             <div>
-            <label for="" class="rad"><input type="radio" value="Yes" checked>Yes</label>
+            <label for="" class="rad"><input type="radio" value="Yes">Yes</label>
             <label for=""><input type="radio" value="No">No</label>
           </div>
             </div>
