--- a/task-6.html
+++ b/task-6.html
@@ -55,10 +55,10 @@
             </tr>
             <tr>
                 <td>0001</td>
-                <td>JHON HONAI</td>
+                <td>Janessa Gottlieb</td>
                 <td>CSE</td>
                 <td>8156658954</td>
-                <td>jhon@gmail.com</td>
+                <td>janessa@gmail.com</td>
             </tr>
             <tr>
                 <td>0002</td>
@@ -69,10 +69,10 @@
             </tr>
             <tr>
                 <td>0003</td>
-                <td>KURIAN ROMA</td>
+                <td>Charles Upton</td>
                 <td>CIVIL</td>
                 <td>8562748965</td>
-                <td>thomas@gmail.com</td>
+                <td>charles@gmail.com</td>
             </tr>
             <tr>
                 <td>0004</td>
@@ -83,10 +83,10 @@
             </tr>
             <tr>
                 <td>0005</td>
-                <td>ANTONY GUS</td>
+                <td>Nelson Bednar</td>
                 <td>CSE</td>
                 <td>9685741254</td>
-                <td>antony@gmail.com</td>
+                <td>nelson@gmail.com</td>
             </tr>
            </table>
         </div>
